add_library(flexirf ${EXTRA_LIBS} 
  ${srcForfIRF}/GIRF.cc
  ${srcForfIRF}/GIRFAxis.cc
  ${srcForfIRF}/GIRFAxisBins.cc
  ${srcForfIRF}/GIRFAxisParam.cc
  ${srcForfIRF}/GIRFConfig.cc 
  ${srcForfIRF}/GIRFPdf.cc
  ${srcForfIRF}/GIRFRange.cc 
  ${srcForfIRF}/GMetaData.cc 
  ${srcForfIRF}/GIRFUtils.cc )
